@@ -1,3 +1,13 @@
+2007-10-30  Nathan Froyd  <froydnj@codesourcery.com>
+
+	* lto-tree.h (union lang_tree_node): Change GTY description to chain
+	with GENERIC_NEXT.
+	* config-lang.in (gtfiles): Add lto-lang.c.
+	* lto-lang.c: Include gt-lto-lto-lang.h.
+	* Make-lang.in (lto/lto-lang.o): Add dependency on gt-lto-lto-lang.h
+	(lto/lto-symtab.o): Depend on LTO_H instead of TREE_H.
+	(lto/lto-read.o): Likewise.
+
 2007-10-29  Kenneth Zadeck <zadeck@naturalbridge.com>
 
 	* lto-read.c (data_in): Added type_decls and current_col fields.
